--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
 
         {% if current_user.is_anonymous%}
         
-            <a style="margin-left: 380px;" class="btn btn-danger" href="" target="_blank">view our menu</a>
+            <a style="margin-left: 380px;" class="btn btn-danger" href="" target="_blank">View our menu</a>
         {%endif%}
         </ul>
     </div>
