--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -23,7 +23,7 @@
               </div>
             </li>
             <li>
-              <div class="col-md-3 "><a class="btn btn-sm btn-info " id="ref" href="{{url_for('main.new_blog')}}">Post</a></div>
+              <div class="col-md-3 "><a class="btn btn-sm btn-info " id="ref" href="{{url_for('main.new_blog')}}">Order</a></div>
             </li>
             {% else %}
             <li class="nav-item">
